--- a/alternative-timeline/src/style/ts-alternative-timeline.css
+++ b/alternative-timeline/src/style/ts-alternative-timeline.css
@@ -1,3 +1,11 @@
 .x-border-layout-ct {
     background-color: white;
 }
+
+.ts-timeline-category-cell {
+    padding-left: 5px;
+    padding-right: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+}
