--- a/alternative-timeline/templates/App-tpl.html
+++ b/alternative-timeline/templates/App-tpl.html
@@ -11,6 +11,8 @@
     </script>
     
     <script type="text/javascript" src="/apps/<%= sdk %>/sdk.js"></script>
+    <!-- our highcharts (needed so that we can add patterns) -->
+    <script type="text/javascript" src="/apps/<%= sdk %>/lib/analytics/analytics-all.js"></script>
 
     <script type="text/javascript">
         Rally.onReady(function() {
